feat: update chart rendering to center pattern with adjustable context candles

--- a/docker/services/frontend/html/config-candlestick.html
+++ b/docker/services/frontend/html/config-candlestick.html
@@ -2770,7 +2770,7 @@
             </div>
 
             <!-- Chart Preview (Collapsible) -->
-            <div class="card">
+            <div class="card" style="margin-top: 1rem;">
                 <div class="card-header" style="cursor: pointer;" onclick="toggleSection('chartPreviewSection')">
                     <h2 class="card-title" style="font-size: 1rem;">🔍 Chart-Vorschau</h2>
                     <div class="btn-group">
