feat: add IDs to batch validation buttons for improved accessibility

--- a/docker/services/frontend/html/config-candlestick.html
+++ b/docker/services/frontend/html/config-candlestick.html
@@ -2687,9 +2687,9 @@
                 <div class="card-header">
                     <h2 class="card-title">🤖 Claude Vision Validator</h2>
                     <div class="btn-group">
-                        <button class="btn btn-primary btn-sm" onclick="runBatchValidation(5)">5x</button>
-                        <button class="btn btn-primary btn-sm" onclick="runBatchValidation(10)">10x</button>
-                        <button class="btn btn-warning btn-sm" onclick="runBatchValidation(20)">20x</button>
+                        <button class="btn btn-primary btn-sm" id="btnBatch5" onclick="runBatchValidation(5)">5x</button>
+                        <button class="btn btn-primary btn-sm" id="btnBatch10" onclick="runBatchValidation(10)">10x</button>
+                        <button class="btn btn-warning btn-sm" id="btnBatch20" onclick="runBatchValidation(20)">20x</button>
                     </div>
                 </div>
                 <div style="display: flex; gap: 1rem; flex-wrap: wrap; align-items: center;">
