feat: add refresh button for auto-optimization and implement persistent storage for pending validations

--- a/docker/services/frontend/html/config-candlestick.html
+++ b/docker/services/frontend/html/config-candlestick.html
@@ -2724,6 +2724,7 @@
                 <div class="card-header">
                     <h2 class="card-title" style="font-size: 1rem;">⚡ Auto-Optimierung</h2>
                     <div class="btn-group">
+                        <button class="btn btn-secondary btn-sm" onclick="loadAutoOptStatus()">Refresh</button>
                         <button class="btn btn-success btn-sm" onclick="toggleAutoOptimization(true)" id="autoOptEnableBtn">Aktivieren</button>
                         <button class="btn btn-danger btn-sm" onclick="toggleAutoOptimization(false)" id="autoOptDisableBtn" style="display: none;">Deaktivieren</button>
                     </div>
